--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,9 +4,33 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>This is FRONTEND</title>
+	<title>Behance</title>
+	<link rel="stylesheet" href="style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=News+Cycle&display=swap" rel="stylesheet"> 
 </head>
 <body>
-	<div id="root"></div>
+	<header>
+		<div><strong>Birmingham <br> Museum</strong></div>
+		<div>
+			<ul class="menu">
+				<li><a href="#home">Home</a></li>
+				<li><a href="#gallery">Gallery</a></li>
+				<li><a href="#history">History</a></li>
+				<li><a href="#contats">Contats</a></li>
+			</ul>
+		</div>
+	</header>
+
+	<div class="cim">
+		<div> Birmingham 
+			<img src="C:\CODECOOL\Weeks\03-04_UI build and Coding basics\Build_a_Behance_UI-UXWeb_project\Build-a-Behance-UI-UX-Web-project\img\line.PNG">
+		</div>
+		<div> <img src="img\line.PNG"> Museum and </div>
+		<div> Art Gallery <img src="frontend\img\1.PNG"> </div>
+		<img src="img\line.PNG">
+	</div>
+
 </body>
 </html>
