--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,11 +25,41 @@
 
 	<div class="cim">
 		<div> Birmingham 
-			<img src="C:\CODECOOL\Weeks\03-04_UI build and Coding basics\Build_a_Behance_UI-UXWeb_project\Build-a-Behance-UI-UX-Web-project\img\line.PNG">
+			<img class="line" src="https://raw.githubusercontent.com/LillaMajorosi/Build-a-Behance-UI-UX-Web-project/main/img/line.PNG">
 		</div>
-		<div> <img src="img\line.PNG"> Museum and </div>
-		<div> Art Gallery <img src="frontend\img\1.PNG"> </div>
-		<img src="img\line.PNG">
+
+		<div> 
+			<img class="line" src="https://raw.githubusercontent.com/LillaMajorosi/Build-a-Behance-UI-UX-Web-project/main/img/line.PNG"> Museum and 
+		</div>
+
+		<div> 
+			Art Gallery
+			<img src="https://raw.githubusercontent.com/LillaMajorosi/Build-a-Behance-UI-UX-Web-project/main/img/1.PNG"> 
+		</div>
+
+		<img class="vg" src="https://raw.githubusercontent.com/LillaMajorosi/Build-a-Behance-UI-UX-Web-project/main/img/vg.PNG">
+
+	</div>
+
+	<div class="museum">
+		Museum
+		<img class="line" src="https://raw.githubusercontent.com/LillaMajorosi/Build-a-Behance-UI-UX-Web-project/main/img/line.PNG">
+	</div>
+
+	<div class="history">
+		<img class="line" src="https://raw.githubusercontent.com/LillaMajorosi/Build-a-Behance-UI-UX-Web-project/main/img/line.PNG">
+		history
+	</div>
+
+	<div class="museum-history">
+		<div>
+
+		</div>
+
+		<div>
+			
+		</div>
+
 	</div>
 
 </body>
