--- a/frontend/index.html
+++ b/frontend/index.html
@@ -52,14 +52,11 @@
 	</div>
 
 	<div class="museum-history">
-		<div>
-
-		</div>
+		The Birmingham Museum began as a private exhibition hall in the early 19th <br> century. At first it was one room in the free library, in which several dozen <br> photographs and copper statue of Buddha from the 1st century BC were <br> hung. Gradually, the museum grew, donated and acquired paintings, artifacts, <br> various collections, they occupied more and more premises in different parts <br> of the city, and in 1885 the Prince of Wales solemmly opened a new biulding <br> specifically for the museum and art gallery. The building was built in the <br> Victorian Baroque style.
 
 		<div>
-			
+		<img src="https://raw.githubusercontent.com/LillaMajorosi/Build-a-Behance-UI-UX-Web-project/main/img/2.PNG">
 		</div>
-
 	</div>
 
 </body>
