--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,32 +12,34 @@
 </head>
 <body>
 	<header>
-		<div><strong>Birmingham <br> Museum</strong></div>
+		<div #id="bm">Birmingham <br> Museum</div>
 		<div>
 			<ul class="menu">
-				<li><a href="#home">Home</a></li>
-				<li><a href="#gallery">Gallery</a></li>
-				<li><a href="#history">History</a></li>
-				<li><a href="#contats">Contats</a></li>
+				<li><a style="text-decoration: none; color:#CC8F46;" href="#home">Home</a></li>
+				<li><a style="text-decoration: none; color:#CC8F46;" href="#gallery">Gallery</a></li>
+				<li><a style="text-decoration: none; color:#CC8F46;" href="#history">History</a></li>
+				<li><a style="text-decoration: none; color:#CC8F46;" href="#contats">Contats</a></li>
 			</ul>
 		</div>
 	</header>
 
 	<div class="cim">
-		<div> Birmingham 
+		<div style="color: antiquewhite"> Birmingham 
 			<img class="line" src="https://raw.githubusercontent.com/LillaMajorosi/Build-a-Behance-UI-UX-Web-project/main/img/line.PNG">
 		</div>
 
-		<div> 
-			<img class="line" src="https://raw.githubusercontent.com/LillaMajorosi/Build-a-Behance-UI-UX-Web-project/main/img/line.PNG"> Museum and 
+		<div class="museum_and"> 
+			<img class="line" src="https://raw.githubusercontent.com/LillaMajorosi/Build-a-Behance-UI-UX-Web-project/main/img/line.PNG"> <span style="color: #CC8F46">Museum </span> <span style="color: antiquewhite">and</span>
 		</div>
 
-		<div> 
-			Art Gallery
+		<div class="art_gallery"> 
+			<span style="color: antiquewhite"> Art </span> <span style="color: #CC8F46"> Gallery </span>
+			<div class="first_png">
 			<img src="https://raw.githubusercontent.com/LillaMajorosi/Build-a-Behance-UI-UX-Web-project/main/img/1.PNG"> 
+			</div>
 		</div>
 
-		<img class="vg" src="https://raw.githubusercontent.com/LillaMajorosi/Build-a-Behance-UI-UX-Web-project/main/img/vg.PNG">
+		<img src="https://raw.githubusercontent.com/LillaMajorosi/Build-a-Behance-UI-UX-Web-project/main/img/vg.PNG">
 
 	</div>
 
@@ -51,12 +53,116 @@
 		history
 	</div>
 
-	<div class="museum-history">
+	<div class="first-museum-history">
 		The Birmingham Museum began as a private exhibition hall in the early 19th <br> century. At first it was one room in the free library, in which several dozen <br> photographs and copper statue of Buddha from the 1st century BC were <br> hung. Gradually, the museum grew, donated and acquired paintings, artifacts, <br> various collections, they occupied more and more premises in different parts <br> of the city, and in 1885 the Prince of Wales solemmly opened a new biulding <br> specifically for the museum and art gallery. The building was built in the <br> Victorian Baroque style.
 
 		<div>
 		<img src="https://raw.githubusercontent.com/LillaMajorosi/Build-a-Behance-UI-UX-Web-project/main/img/2.PNG">
 		</div>
+	</div>
+
+	<div class="second-museum-history">
+		<div>
+			<img src="https://raw.githubusercontent.com/LillaMajorosi/Build-a-Behance-UI-UX-Web-project/main/img/3.PNG">
+		</div>
+		
+		<div id="second-mh-padding">
+		Above the museum and art gallery is a clock that the locals call Big Broom (brum is the <br>local term for the name of the city. inhabitants and dialect). The clock was donated to the <br>city by a researcher who measured meteorological and  chronological data in Birmingham. <br>The chime of the Birmingham clock is very similar to the chime of London's Big Ben, hence<br> its name.
+		<br>
+		<br>
+		The art gallery has a large collection of Pre-Raphaelite paintings, and there are more <br>paintings by Edward Burne-Jones than in other museums in the world. A large collection of<br> English artists from different periods. There are Flemings, and French, and Italians, and<br> Spaniards (Rubens, Botticelli, Murillo).<br>
+		The museum belongs to the city council. Entrance to the museum and gallery is free.
+		</div>
+	</div>
+
+	<br>
+	<br>
+	<br>
+	<br>
+
+	<div class="museum">
+		Art
+		<img class="line" src="https://raw.githubusercontent.com/LillaMajorosi/Build-a-Behance-UI-UX-Web-project/main/img/line.PNG">
+	</div>
+
+	<div class="history">
+		<img class="line" src="https://raw.githubusercontent.com/LillaMajorosi/Build-a-Behance-UI-UX-Web-project/main/img/line.PNG">
+		gallery
+	</div>
+
+
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+
+	<div class="museum">
+		Upcoming
+		<img class="line" src="https://raw.githubusercontent.com/LillaMajorosi/Build-a-Behance-UI-UX-Web-project/main/img/line.PNG">
+	</div>
+
+	<div id="upe" class="history">
+		<img class="line" src="https://raw.githubusercontent.com/LillaMajorosi/Build-a-Behance-UI-UX-Web-project/main/img/line.PNG">
+		events
+	</div>
+
+	<div class="upc-events">
+		<div>
+			<img src="https://raw.githubusercontent.com/LillaMajorosi/Build-a-Behance-UI-UX-Web-project/main/img/7.PNG">
+		</div>
+
+		<div id="sat">
+
+			<div class="sat-list">
+				Art Saturdays in the art gallery
+			</div>
+
+			<div class="program">
+				"The World Through My Eyes"
+
+				<div class="icon", id="arrow-position">
+					<div class="arrow"></div>
+				</div>
+			</div>
+
+			<div class="program">
+				"Inspiration and vocation"
+
+				<div class="icon">
+					<div class="arrow"></div>
+				</div>
+			</div>
+			
+			<div class="program">
+				"Russian patterns"
+
+				<div class="icon">
+					<div class="arrow"></div>
+				</div>
+			</div>
+
+			<div class="program">
+				"Famous people"
+
+				<div class="icon">
+					<div class="arrow"></div>
+				</div>
+			</div>
+
+			<div id="free">
+				*All exhibitons are free
+			</div>
+
+		</div>
+
 	</div>
 
 </body>
