--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,7 @@
 		</div>
 	</header>
 
-	<div class="cim">
+	<div class="birmingham">
 		<div style="color: antiquewhite"> Birmingham 
 			<img class="line" src="https://raw.githubusercontent.com/LillaMajorosi/Build-a-Behance-UI-UX-Web-project/main/img/line.PNG">
 		</div>
@@ -164,6 +164,117 @@
 		</div>
 
 	</div>
+
+	<div>
+		<img class="sat-vg" src="https://raw.githubusercontent.com/LillaMajorosi/Build-a-Behance-UI-UX-Web-project/main/img/vg.PNG">
+	</div>
+
+	<br>
+	<br>
+	<br>
+	<br>
+
+	<div class="museum">
+		In pursuit
+		<img class="line" src="https://raw.githubusercontent.com/LillaMajorosi/Build-a-Behance-UI-UX-Web-project/main/img/line.PNG">
+	</div>
+
+	<div class="history">
+		<img class="line" src="https://raw.githubusercontent.com/LillaMajorosi/Build-a-Behance-UI-UX-Web-project/main/img/line.PNG">
+		of beauty
+	</div>
+
+	<div class="first-museum-history">
+		<div class="first-beauty">
+		The memory of the wedding of Thetis (either a <br> sea nymph, or the daughter of the centaur <br> Chiron) and Peleus, a mere mortal, has been <br> preserved for centuries. No one before or since <br> has seem such a significant feast, which was <br> attended by almost all the Olympian gods.
+		<br>
+		<br>
+		And the story that ended with the wedding began <br> long before that. Zeus, a great lover of women, <br> was inflamed with passion (for the umpteenth <br> time) for the pupil of his wife Hera, the young <br> and beautyful Thetis.
+		</div>
+
+		<div>
+		<img src="https://raw.githubusercontent.com/LillaMajorosi/Build-a-Behance-UI-UX-Web-project/main/img/8.PNG">
+		</div>
+
+	</div>
+
+	<div class="eight-picture-title">
+		The Feast of Peleus. Artist: Sir Edward Burne-Jones
+	</div>
+
+	<div class="second-museum-history">
+		<div>
+			<img src="https://raw.githubusercontent.com/LillaMajorosi/Build-a-Behance-UI-UX-Web-project/main/img/9.PNG">
+		</div>
+		
+		<div id="second-beauty-padding">
+			And he would have taken possession of it, if not for the prediction of Promotheus that Thetis <br> would give birth to a son who would be stronger than his father. It was not at all part of Zeus's <br> plans for someone to overthrow him from the Olympic throne. And he decided to arrange the <br> wedding of Thetis with a mortal. This child will definitely not claim the Olympic throne.
+			<br>
+			<br>
+			The choice of Zeus fell on Peleis. Although Peleus was a hero who followed the Golden <br> Fleece with the Argonauts and participated in the battle for Troy, he was still only a mortal.<br> And in order to intermarry with the gods, Peleis had to defeat Thetis in a duel. <br> And only then take her as his wife.
+			<br>
+			<br>
+			The wedding of Thetis and Peleus was celebrated in the cave of Chiron on Mount Pelion in <br> the presence of all the Olympian gods. Well, almost everyone. One Eris, the goddess of <br> discord, was not invited to the wedding. By the way, this decision ended tragically for both<br> gods and people - the Trojan War began. But that's another story.
+		</div>
+	</div>
+
+	<div class="nine-picture-title">
+		Bloomart Abraham (1564-1651) - The wedding of Peleus and Thetis
+	</div>
+
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+
+	<div class="museum">
+		Contats <span style="color: #CC8F46"> and </span>
+		<img class="line" src="https://raw.githubusercontent.com/LillaMajorosi/Build-a-Behance-UI-UX-Web-project/main/img/line.PNG">
+	</div>
+
+	<div class="opening">
+		<img class="line" src="https://raw.githubusercontent.com/LillaMajorosi/Build-a-Behance-UI-UX-Web-project/main/img/line.PNG">
+		opening <span style="color: #CC8F46"> hours </span>
+	</div>
+
+	<div class="upc-events">
+		<div id="sat">
+			<div class="contacts">
+				Adress: Chamberlaim Square, Bbbbbbbbbb B3 3DH
+			</div>
+
+			<div class="contacts">
+				Phone: 0121 348 8032
+			</div>
+			
+			<div class="contacts">
+				Web-site: http://www.burminghammuseums.com
+			</div>
+
+			<div class="contacts">
+				Working hours: 10-17
+			</div>
+	</div>
+
+	<div>
+		<img src="https://raw.githubusercontent.com/LillaMajorosi/Build-a-Behance-UI-UX-Web-project/main/img/10.PNG">
+	</div>
+
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+
+	
+	
+
 
 </body>
 </html>
